// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dependencyConfig - BlankLib (Ignore react-native.config.js) 1`] = `null`;

exports[`dependencyConfig - BlankLib (Use react-native.config.js) 1`] = `null`;

exports[`dependencyConfig - MissingProjectFilesLib (Ignore react-native.config.js) 1`] = `
{
  "folder": StringContaining "MissingProjectFilesLib",
  "nugetPackages": [],
  "projects": [],
  "solutionFile": null,
  "sourceDir": "windows",
}
`;

exports[`dependencyConfig - MissingProjectFilesLib (Use react-native.config.js) 1`] = `
{
  "folder": StringContaining "MissingProjectFilesLib",
  "nugetPackages": [],
  "projects": [],
  "solutionFile": null,
  "sourceDir": "windows",
}
`;

exports[`dependencyConfig - SimpleCSharpApp (Ignore react-native.config.js) 1`] = `
{
  "folder": StringContaining "SimpleCSharpApp",
  "nugetPackages": [],
  "projects": ArrayContaining [
    ObjectContaining {
      "projectFile": StringMatching /Error: \\.\\*\\\\\\.\\(\\?:cs\\|vcx\\)proj is type '\\\\w\\+'/,
    },
  ],
  "solutionFile": "SimpleCSharpApp.sln",
  "sourceDir": "windows",
}
`;

exports[`dependencyConfig - SimpleCSharpApp (Use react-native.config.js) 1`] = `
{
  "folder": StringContaining "SimpleCSharpApp",
  "nugetPackages": [],
  "projects": ArrayContaining [
    ObjectContaining {
      "projectFile": StringMatching /Error: \\.\\*\\\\\\.\\(\\?:cs\\|vcx\\)proj is type '\\\\w\\+'/,
    },
  ],
  "solutionFile": "SimpleCSharpApp.sln",
  "sourceDir": "windows",
}
`;

exports[`dependencyConfig - SimpleCSharpLib (Ignore react-native.config.js) 1`] = `
{
  "folder": StringContaining "SimpleCSharpLib",
  "nugetPackages": [],
  "projects": [
    {
      "cppHeaders": [
        "winrt/SimpleCSharpLib.h",
      ],
      "cppPackageProviders": [
        "SimpleCSharpLib::ReactPackageProvider",
      ],
      "csNamespaces": [
        "SimpleCSharpLib",
      ],
      "csPackageProviders": [
        "SimpleCSharpLib.ReactPackageProvider",
      ],
      "directDependency": true,
      "projectFile": "SimpleCSharpLib\\SimpleCSharpLib.csproj",
      "projectGuid": "{416476D5-974A-4EE2-8145-4E331297247E}",
      "projectLang": "cs",
      "projectName": "SimpleCSharpLib",
    },
  ],
  "rnwConfig": {
    "init-windows": {
      "template": "old/uwp-cs-lib",
    },
    "projectArch": "old",
    "projectLang": "cs",
    "projectType": "lib",
  },
  "solutionFile": "SimpleCSharpLib.sln",
  "sourceDir": "windows",
}
`;

exports[`dependencyConfig - SimpleCSharpLib (Use react-native.config.js) 1`] = `
{
  "folder": StringContaining "SimpleCSharpLib",
  "nugetPackages": [],
  "projects": [
    {
      "cppHeaders": [
        "winrt/SimpleCSharpLib.h",
      ],
      "cppPackageProviders": [
        "SimpleCSharpLib::ReactPackageProvider",
      ],
      "csNamespaces": [
        "SimpleCSharpLib",
      ],
      "csPackageProviders": [
        "SimpleCSharpLib.ReactPackageProvider",
      ],
      "directDependency": true,
      "projectFile": "SimpleCSharpLib\\SimpleCSharpLib.csproj",
      "projectGuid": "{416476D5-974A-4EE2-8145-4E331297247E}",
      "projectLang": "cs",
      "projectName": "SimpleCSharpLib",
    },
  ],
  "rnwConfig": {
    "init-windows": {
      "template": "old/uwp-cs-lib",
    },
    "projectArch": "old",
    "projectLang": "cs",
    "projectType": "lib",
  },
  "solutionFile": "SimpleCSharpLib.sln",
  "sourceDir": "windows",
}
`;

exports[`dependencyConfig - SimpleCppApp (Ignore react-native.config.js) 1`] = `
{
  "folder": StringContaining "SimpleCppApp",
  "nugetPackages": [],
  "projects": ArrayContaining [
    ObjectContaining {
      "projectFile": StringMatching /Error: \\.\\*\\\\\\.\\(\\?:cs\\|vcx\\)proj is type '\\\\w\\+'/,
    },
  ],
  "solutionFile": "SimpleCppApp.sln",
  "sourceDir": "windows",
}
`;

exports[`dependencyConfig - SimpleCppApp (Use react-native.config.js) 1`] = `
{
  "folder": StringContaining "SimpleCppApp",
  "nugetPackages": [],
  "projects": ArrayContaining [
    ObjectContaining {
      "projectFile": StringMatching /Error: \\.\\*\\\\\\.\\(\\?:cs\\|vcx\\)proj is type '\\\\w\\+'/,
    },
  ],
  "solutionFile": "SimpleCppApp.sln",
  "sourceDir": "windows",
}
`;

exports[`dependencyConfig - SimpleCppLib (Ignore react-native.config.js) 1`] = `
{
  "folder": StringContaining "SimpleCppLib",
  "nugetPackages": [],
  "projects": [
    {
      "cppHeaders": [
        "winrt/SimpleCppLib.h",
      ],
      "cppPackageProviders": [
        "SimpleCppLib::ReactPackageProvider",
      ],
      "csNamespaces": [
        "SimpleCppLib",
      ],
      "csPackageProviders": [
        "SimpleCppLib.ReactPackageProvider",
      ],
      "directDependency": true,
      "projectFile": "SimpleCppLib\\SimpleCppLib.vcxproj",
      "projectGuid": "{416476d5-974a-4ee2-8145-4e331297247e}",
      "projectLang": "cpp",
      "projectName": "SimpleCppLib",
    },
  ],
  "rnwConfig": {
    "init-windows": {
      "template": "old/uwp-cpp-lib",
    },
    "projectArch": "old",
    "projectLang": "cpp",
    "projectType": "lib",
  },
  "solutionFile": "SimpleCppLib.sln",
  "sourceDir": "windows",
}
`;

exports[`dependencyConfig - SimpleCppLib (Use react-native.config.js) 1`] = `
{
  "folder": StringContaining "SimpleCppLib",
  "nugetPackages": [],
  "projects": [
    {
      "cppHeaders": [
        "winrt/SimpleCppLib.h",
      ],
      "cppPackageProviders": [
        "SimpleCppLib::ReactPackageProvider",
      ],
      "csNamespaces": [
        "SimpleCppLib",
      ],
      "csPackageProviders": [
        "SimpleCppLib.ReactPackageProvider",
      ],
      "directDependency": true,
      "projectFile": "SimpleCppLib\\SimpleCppLib.vcxproj",
      "projectGuid": "{416476d5-974a-4ee2-8145-4e331297247e}",
      "projectLang": "cpp",
      "projectName": "SimpleCppLib",
    },
  ],
  "rnwConfig": {
    "init-windows": {
      "template": "old/uwp-cpp-lib",
    },
    "projectArch": "old",
    "projectLang": "cpp",
    "projectType": "lib",
  },
  "solutionFile": "SimpleCppLib.sln",
  "sourceDir": "windows",
}
`;

exports[`dependencyConfig - WithIndirectDependency (Ignore react-native.config.js) 1`] = `
{
  "folder": StringContaining "WithIndirectDependency",
  "nugetPackages": [],
  "projects": [],
  "solutionFile": "WithIndirectDependency.sln",
  "sourceDir": "windows",
}
`;

exports[`dependencyConfig - WithIndirectDependency (Use react-native.config.js) 1`] = `
{
  "folder": StringContaining "WithIndirectDependency",
  "nugetPackages": [],
  "projects": [
    {
      "cppHeaders": [
        "winrt/WithIndirectDependency.h",
      ],
      "cppPackageProviders": [
        "WithIndirectDependency::ReactPackageProvider",
      ],
      "csNamespaces": [
        "WithIndirectDependency",
      ],
      "csPackageProviders": [
        "WithIndirectDependency.ReactPackageProvider",
      ],
      "directDependency": true,
      "projectFile": "WithIndirectDependency\\WithIndirectDependency.vcxproj",
      "projectGuid": "{416476d5-974a-4ee2-8145-4e331297247e}",
      "projectLang": "cpp",
      "projectName": "WithIndirectDependency",
    },
    {
      "directDependency": false,
      "projectFile": "IndirectDependency\\IndirectDependency.vcxproj",
      "projectGuid": "{416476d5-974a-4ee2-8145-4e331297247e}",
      "projectLang": "cpp",
      "projectName": "IndirectDependency",
    },
  ],
  "solutionFile": "WithIndirectDependency.sln",
  "sourceDir": "windows",
}
`;
